Correction d'un bug d'affichage pour la version mobile sur la page 'Product'

--- a/src/pages/Products/products.scss
+++ b/src/pages/Products/products.scss
@@ -8,6 +8,7 @@
     align-items: center;
     width: 100%;
     padding: 80px 100px 0 100px;
+    overflow-x: hidden;
 
     @include desktop {
         padding: 80px 60px 0 60px;
